--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --no-inline",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "lint": "tslint --project ."
   },
   "devDependencies": {
     "@types/react": "^16.9.1",
@@ -18,6 +19,8 @@
     "react-docgen-typescript-loader": "^3.1.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.5.3",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
