--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
-    "@types/storybook__react": "^4.0.2",
+    "@types/styled-components": "^4.1.18",
     "html-webpack-plugin": "^3.2.0",
     "react-docgen-typescript-loader": "^3.1.1",
     "source-map-loader": "^0.2.4",
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "styled-components": "^4.3.2"
   }
 }
